--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="slider">
+            <div class="slider-item">
+                <img src="img/foto_1.jpg" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/foto_2.jpg" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/foto_3.jpg" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/foto_4.jpg" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/foto_.png" alt="">
+            </div>
+        </div>
 
+        <button class="slider-btn-left">left</button>
+        <button class="slider-btn-right">right</button>
+    </div>
 </body>
 
 </html>
